Name:         blaze-markup-haste
Version:      0.6.0.0
Homepage:     http://jaspervdj.be/blaze
Bug-Reports:  http://github.com/jaspervdj/blaze-markup/issues
License:      BSD3
License-file: LICENSE
Author:       Jasper Van der Jeugt, Simon Meier, Deepak Jois
Maintainer:   Jasper Van der Jeugt <m@jaspervdj.be>
Stability:    Experimental
Category:     Text
Synopsis:     A blazingly fast markup combinator library for Haskell
Description:
  Core modules of a blazingly fast markup combinator library for the Haskell
  programming language. The Text.Blaze module is a good
  starting point, as well as this tutorial:
  <http://jaspervdj.be/blaze/tutorial.html>.

Build-type:    Simple
Cabal-version: >= 1.8

Extra-source-files:
  CHANGELOG

Library
  Hs-source-dirs: src
  Ghc-Options:    -Wall

  Build-depends:
    base          >= 4    && < 5

  Exposed-modules:
    Text.Blaze
    Text.Blaze.Internal
    Text.Blaze.Renderer.Pretty
    Text.Blaze.Renderer.String

